solved db problem

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://UserBY:UserBaYa@clusterby.kejv4ab.mongodb.net/
+MONGO_URL=mongodb://UserBY:UserBaYa@ac-l0hsygv-shard-00-00.l3szprb.mongodb.net:27017,ac-l0hsygv-shard-00-01.l3szprb.mongodb.net:27017,ac-l0hsygv-shard-00-02.l3szprb.mongodb.net:27017/?ssl=true&replicaSet=atlas-12r3t6-shard-0&authSource=admin&retryWrites=true&w=majority
