--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGO_URL=mongodb+srv://UserBY:BaYa@clustermobile.c1vzhpi.mongodb.net/?retryWrites=true&w=majority&appName=ClusterMobile
+MONGODB_URI=mongodb://UserBY:BaYa@ac-9oxp4xj-shard-00-00.c1vzhpi.mongodb.net:27017,ac-9oxp4xj-shard-00-01.c1vzhpi.mongodb.net:27017,ac-9oxp4xj-shard-00-02.c1vzhpi.mongodb.net:27017/?ssl=true&replicaSet=atlas-o3jc4l-shard-0&authSource=admin&retryWrites=true&w=majority&appName=ClusterMobile
+#MONGODB_URI=mongodb+srv://UserBY:BaYa@clustermobile.c1vzhpi.mongodb.net/?retryWrites=true&w=majority&appName=ClusterMobile
+
+PORT=3000
